<!--
  ~ Copyright © 2018 Aldo Gunsing.
  ~ Copyright © Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->
<resources>
    <string name="app_name" translatable="false">DecSync CC</string>
    <string name="title_activity_main" translatable="false">DecSync CC</string>
    <string name="title_activity_main_with_dir">DecSync CC (%s)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_intro">Introduction</string>
    <string name="title_activity_saf_update">Android update</string>
    <string name="title_activity_add_directory">Add DecSync directory</string>

    <string name="account_name_contacts">DecSync Contacts</string>
    <string name="account_name_calendars">DecSync Calendars</string>
    <string name="account_name_calendars_with_dir_name">DecSync Calendars (%s)</string>
    <string name="account_name_tasks">DecSync Tasks</string>
    <string name="account_name_tasks_with_dir_name">DecSync Tasks (%s)</string>
    <string name="account_type_contacts" translatable="false">org.decsync.contacts</string>
    <string name="account_type_calendars" translatable="false">org.decsync.calendars</string>
    <string name="account_type_tasks" translatable="false">org.decsync.tasks</string>
    <string name="tasks_app_opentasks">OpenTasks</string>
    <string name="tasks_app_tasks_org">Tasks</string>
    <string name="no_app_store">No app store available</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DecSync CC</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_directories_title">DecSync directories</string>
    <string name="nav_directories_add">Add directory</string>
    <string name="decsync_dir_show">Show DecSync directory</string>
    <string name="decsync_dir_remove">Remove DecSync directory</string>
    <string name="rename_decsync_dir_title">Rename DecSync directory</string>
    <string name="decsync_dir_collections_enabled_message">There are still some collections enabled. Disable all collections before removing the DecSync directory.</string>
    <string name="remove_decsync_dir_title">Are you sure you want to remove the DecSync directory \'%s\'? No files will be deleted.</string>

    <!-- MainActivity -->
    <string name="account_contacts">Address books</string>
    <string name="account_contacts_unknown">Address books (unknown)</string>
    <string name="account_calendars">Calendars</string>
    <string name="account_calendars_unknown">Calendars (unknown)</string>
    <string name="account_task_lists">Task lists</string>
    <string name="account_task_lists_unknown">Task lists (unknown)</string>
    <string name="account_collection_empty">No collections</string>
    <string name="account_synchronize_now">Synchronize now</string>
    <string name="account_show_deleted_collections">Show deleted collections</string>
    <string name="account_synchronizing_now">Synchronizing now</string>
    <string name="account_synchronize_this_collection">synchronize this collection</string>
    <string name="account_refresh_address_book_list">Refresh address book list</string>
    <string name="account_create_new_address_book">Create new address book</string>
    <string name="account_refresh_calendar_list">Refresh calendar list</string>
    <string name="account_create_new_calendar">Create new calendar</string>
    <string name="account_create_new_task_list">Create new task list</string>
    <string name="create_new_collection">New collection</string>
    <string name="import_existing_collection">Import existing collection</string>
    <string name="select_account">Select account</string>
    <string name="no_accounts">No accounts found</string>
    <string name="contacts_account_info">%s: %d contacts</string>
    <string name="calendar_account_info">%s (%s): %d events</string>
    <string name="create_collection_title">Name for new collection</string>
    <string name="rename_collection">Rename collection</string>
    <string name="rename_collection_title">New name for collection</string>
    <string name="change_color_collection">Change color</string>
    <string name="delete_collection">Delete collection</string>
    <string name="delete_collection_title">Are you sure you want to delete the collection \'%s\'?</string>
    <string name="restore_collection">Restore collection</string>
    <string name="perm_delete_collection">Permanently delete collection</string>
    <string name="perm_delete_collection_title">Are you sure you want to permanently delete the collection \'%s\'?</string>
    <string name="no_task_app_title">No task apps installed. Choose one to install.</string>
    <string name="choose_task_app_title">Multiple task apps installed. Choose one to use.</string>
    <string name="entries_count">Entries count</string>
    <string name="entries_count_title">Entries count</string>
    <string name="entries_count_message">Android entries: %d\nProcessed entries: %d\nDecSync entries: %s</string>
    <string name="manage_decsync_data">Manage DecSync data</string>
    <string name="account_settings">Settings</string>
    <string name="account_collection_name_default">Personal</string>
    <string name="account_collection_name_default_n">Personal %d</string>

    <!-- Notifications -->
    <string name="notification_adding_contacts">Adding contacts of %s</string>
    <string name="notification_adding_events">Adding events of %s</string>
    <string name="notification_adding_tasks">Adding tasks of %s</string>
    <string name="notification_importing_contacts">Importing contacts to %s</string>
    <string name="notification_importing_events">Importing events to %s</string>
    <string name="notification_importing_tasks">Importing tasks to %s</string>
    <string name="notification_saf_update_title">New Android version</string>
    <string name="notification_saf_update_message">The DecSync directory needs to be reselected</string>

    <!-- IntroActivity -->
    <string name="intro_welcome_title">Welcome to DecSync CC</string>
    <string name="intro_welcome_desc">DecSync CC synchronizes contacts, calendars and tasks using DecSync\n\nIt stores this data in a shared directory, using Syncthing, Google Drive, Dropbox or any other file synchronization service</string>
    <string name="intro_syncthing_title">Syncthing</string>
    <string name="intro_syncthing_desc">Syncthing synchronizes files directly between devices, without storing the data centrally or requiring a server\n\nDecSync CC works with any file synchronization service, but using Syncthing is recommended as your data stays on your devices</string>
    <string name="intro_syncthing_button">Install Syncthing</string>
    <string name="intro_directory_title">DecSync Directory</string>
    <string name="intro_directory_desc">The DecSync directory contains your contacts, calendars and tasks. Select your synchronized directory from Syncthing, Google Drive, Dropbox or another service.</string>
    <string name="intro_directory_button">Choose directory</string>
    <string name="intro_directory_select">Please select a DecSync directory</string>

    <!-- AddDirectoryActivity -->
    <string name="add_directory_title">DecSync Directory</string>
    <string name="add_directory_desc">Add a new DecSync directory to share contacts, calendars and tasks with friends or family</string>
    <string name="add_directory_name_label">Name</string>
    <string name="add_directory_dir_used">Directory already used</string>
    <string name="add_directory_name_empty">Please enter a name</string>
    <string name="add_directory_name_used">Name already used</string>
    <string name="decsync_dir_name_default">Principal</string>
    <string name="decsync_dir_name_default_n">Principal %d</string>

    <!-- SafUpdateActivity -->
    <string name="saf_update_welcome_title">Android Update</string>
    <string name="saf_update_welcome_desc">Due to changed Android requirements you need to reselect the DecSync directories</string>
    <string name="saf_update_directory_title">DecSync Directory (%s)</string>
    <string name="saf_update_directory_desc">Please select the directory located at</string>

    <!-- Startup dialogs -->
    <string name="startup_battery_optimization">Scheduled synchronization</string>
    <string name="startup_battery_optimization_message">Your device will restrain DecSync CC synchronization. To enforce regular DecSync CC sync intervals, turn off \"battery optimization\".</string>
    <string name="startup_battery_optimization_disable">Turn off for DecSync CC</string>
    <string name="startup_dont_show_again">Don\'t show again</string>
    <string name="startup_not_now">Not now</string>

    <!-- GeneralPrefsActivity -->
    <string name="settings_about">About DecSync CC</string>
    <string name="settings_category_decsync">DecSync</string>
    <string name="settings_decsync_directory">Select DecSync directory</string>
    <string name="settings_decsync_file">DecSync directory</string>
    <string name="settings_decsync_collections_enabled_title">Enabled collections</string>
    <string name="settings_decsync_collections_enabled_message">There are still some collections enabled. Disable all collections before changing the DecSync directory.</string>
    <string name="settings_decsync_dir_not_configured">No DecSync directory configured</string>
    <string name="settings_category_tasks">Tasks</string>
    <string name="settings_task_app">Task app</string>
    <string-array name="settings_task_app_values" translatable="false">
        <item />
    </string-array>
    <string-array name="settings_task_app_names">
        <item>None</item>
    </string-array>
    <string name="settings_decsync_task_lists_enabled_title">Enabled task lists</string>
    <string name="settings_decsync_task_lists_enabled_message">There are still some task lists enabled. Disable all task lists before changing the task app.</string>
    <string name="settings_category_theme">Theme</string>
    <string name="settings_theme">Theme</string>
    <string-array name="settings_theme_values" translatable="false">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="settings_theme_names">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <!-- Notification channel -->
    <string name="channel_init_sync_name">Initial sync</string>
    <string name="channel_init_sync_description">Notification shown during the initial sync</string>
    <string name="channel_import_name">Import</string>
    <string name="channel_import_description">Notification shown during an import</string>
    <string name="channel_error_name">Errors</string>
    <string name="channel_error_description">Notification shown during an error</string>
</resources>
