<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_directories_container"
        android:title="@string/nav_directories_title">
        <menu>
            <group
                android:id="@+id/nav_directories"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_directories_add"
                    android:icon="@drawable/ic_add_light"
                    android:title="@string/nav_directories_add"
                    android:checkable="false"
                    android:orderInCategory="100" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/account_settings" />
</menu>