<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_add_directory">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_directory_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/add_directory_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/intro_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/add_directory_desc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/intro_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/folder"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/add_directory_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/intro_directory_button"
            android:textSize="12sp"
            android:textAllCaps="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_directory_name_layout"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp">
            <EditText
                android:id="@+id/add_directory_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:importantForAutofill="no"
                android:hint="@string/add_directory_name_label" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</RelativeLayout>