<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_intro_syncthing">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/intro_welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/intro_syncthing_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/intro_title"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/ic_syncthing" />

        <Button
            android:id="@+id/intro_syncthing_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_syncthing_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:text="@string/intro_syncthing_desc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/intro_desc" />

    </LinearLayout>


</RelativeLayout>