<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_saf_update_directory">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/saf_update_directory_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/saf_update_directory_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/intro_title"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/folder"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/saf_update_directory_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/intro_directory_button"
            android:textSize="12sp"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/saf_update_directory_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/saf_update_directory_desc"
            android:textColor="@android:color/white"
            android:textSize="@dimen/intro_desc" />

        <TextView
            android:id="@+id/saf_update_directory_desc_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="64dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/saf_update_path"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>